# PlacelookAndroid

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Arguments.h  JNI_NativeCoder.cpp  Log.h  NativeCoder.cpp  NativeCoder.h  ThreadQueue.cpp  ThreadQueue.h  avcencoder.cpp  avcencoder.h  jni_codec.cpp
app/src/main/java/com/placelook/: App.java  BaseActivity.java  Constants.java  LoginActivity.java  MainActivity.java  OperatorActivity.java  Settings.java  SplashActivity.java
app/src/main/java/com/placelook/camera/: AVCEncoder.java  AvcEncoder.java  CameraHelper.java  EncodedFrameListener.java  Encoder.java  Frame.java  IllegalCodecException.java  ParameterSetsListener.java  UndefinedImportantParameterException.java
app/src/main/java/com/placelook/util/: Error.java  NetworkType.java  Util.java  (+2 more)
app/src/main/res/color/: black_white.xml
app/src/main/res/drawable/: black_3g.xml  black_gps.xml  black_wifi.xml  gps_on_off.xml  ic_location_on_grey.xml  ic_signal_3g_off.xml  ic_signal_3g_on.xml  ic_signal_wifi_on_white.xml  line.xml  rect_black.xml  rect_button.xml  rect_color.xml  rect_fbcolor.xml  rect_gpcolor.xml  rect_trans_with_white_border.xml  rect_twcolor.xml  rect_vkcolor.xml
app/src/main/res/layout/: activity_login.xml  activity_operator.xml  activity_splash.xml  app_bar_main.xml  content_main.xml  fragment_camera.xml  fragment_login.xml  fragment_new_user.xml  fragment_prev_operator.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
(+6 files in other folders)
